[tool.poetry]
name = "4denoisenet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.1.1", source = "torch_cu121"}
torchvision = {version = "0.16.1", source = "torch_cu121"}
torchaudio = {version = "2.1.1", source = "torch_cu121"}
pyyaml = "^6.0.2"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
tensorflow = "^2.17.0"
vispy = "^0.14.3"
imageio = "^2.36.0"
pyopengltk = "^0.0.4"
tqdm = "^4.66.5"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
